assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import 'normalize';
@import 'variables';
@import 'mixins';

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  background: $darkBlue;
  color: $white;
  font-family: $serif;
}

.wrapper {
  margin: 0 auto;
  width: 100%;
  max-width: $maxWidth;
  padding: 0 $wrapperPad;
}

.header {
   background: $lightGrey;
   border-bottom: .8rem solid $green;
   padding: 1.5rem 0;
   transition: .2s all ease;
}

// this prevents the page content from jumping around when the .header height changes
.header__wrap {
  height: $headerHeight;
}

.header--down {
  height: $headerHeight; // this is defined for the transition to animate
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2;
}

.header--up {
  height: 0;
}

.header--onlyNav {
  height: 6.5rem;
  padding: 0;
}

.header__logo {
  display: block;
  font-family: $sansSerif;
  font-size: 2rem;
  font-weight: 700;
  margin: auto;
  opacity: .2;
  padding: 0 0 1.5rem;
  text-align: center;
  text-decoration: none;

  // hide logo when header is fixed and down the page
  .header--onlyNav & {
    display: none;
  }
}

main {

}

.content {

  & > *:not(section),
  section > * {
    margin-left: 33%;

    @include breakpoint(mobile) {
      margin-left: auto;
    }
  }
}

section {
  padding-top: 1.8rem;
}

figure {
  margin: 2rem 0 4rem;

  figcaption {
    font-family: $sansSerif;
    margin: 1rem 0 2rem 0;
    text-align: right;
  }

  & > img {
    width: 100%;
  }
}

// doubled-up for specificity
.fullWidth.fullWidth {
  margin-left: 0;
  position: relative;
}

.no-scroll {
  overflow: hidden;
}

// typography

// typekit font event:
// https://helpx.adobe.com/typekit/using/font-events.html
.wf-loading {
  a,
  span,
  h1,
  h2,
  h3,
  h4,
  p {
    visibility: hidden;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $sansSerif;
}

h1 {
  font-size: 2.8rem;
  font-weight: 700;
  line-height: 1;
}

h2 {
  border-bottom: 1px solid $white;
  color: $yellow;
  font-size: 2.5rem;
  font-weight: 500;
  line-height: 1;
  padding: 0 0 1rem 0;

  .bg--white & {
    color: $green;
    border-color: $grey;
  }
}

h3 {
  color: $green;
  font-size: 2rem;
}

h4 {
  font-size: 1.5rem;
  opacity: .6;
}

h5 {
  font-size: 1.2rem;
}

p {
  font-size: 1.4rem;
  line-height: 1.4;
  margin: 0 0 1rem 0;
}

ul {
  line-height: 1.5;
}

// typography for the flyOut box
// doubled up so it doesn't compete with ai2html graphic specificity
.flyOut__inner__text.flyOut__inner__text {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    color: $black;
    font-family: $sansSerif;
  }
}

// navigation

nav {
  font-family: $sansSerif;
}

.mainNav {
  border-top: 1px solid $grey;
  display: flex;
  justify-content: space-between;
  line-height: 1;
  padding: 0 0 1rem;
  width: 100%;

  @include breakpoint('mobile') {
    flex-direction: column;
  }

  a {
    // border-left: 1px solid $black;
    width: 33%;
    color: $green;
    margin: 0 0 0 $columnPad;
    padding: 1rem 0 0 0;
    position: relative;
    text-decoration: none;

    @include breakpoint('mobile') {
      margin: 0 auto 1rem;
      width: 100%;
    }

    &:first-child {
      margin-left: 0;

      @include breakpoint('mobile') {
        margin-left: auto;
      }

      // no border on the first child
      &::after {
        background: $black;
        content: '';
        height: 0rem;
        left: -1rem;
        position: absolute;
        top: 0;
        width: 0px;
      }
    }

    // this creates the left border on menu items, with a fixed height
    &::after {
      background: $grey;
      content: '';
      height: 1.5rem;
      left: -1rem;
      position: absolute;
      top: 0;
      width: 1px;

      // hide the border on mobile
      @include breakpoint('mobile') {
        height: 0;
        width: 0;
      }
    }

    // active top nav item
    &.active {
      color: $darkBlue;
    }
  }
}

.mainNav__preTitle {
  color: $grey;
  display: block;
  font-family: $sansSerif;
  font-size: 1rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.mainNav__title {
  display: block;
  font-size: 1.2rem;
  font-weight: 700;
  max-width: 16rem;
}

// added extra classes for specificity
.content .toc.toc {
  background: $darkBlue;
  border-left: 1rem solid $yellow;
  color: white;
  float: left;
  margin: 2rem 0 0 0;
  padding: 1.8rem $wrapperPad;
  position: sticky;
  top: 1.8rem;
  width: calc(33% - #{$columnPad});
  z-index: 0;

  @include breakpoint(mobile) {
    position: static;
    width: 100%;
  }

  // TOC nav link styling
  a {
    transition: .4s all ease;
    text-decoration: none;

    &:link,
    &:visited,
    &:active {
      color: $white;
    }

    &:hover {
      color: $white;
      opacity: .8;
    }
  }

  // doubled-up for specificity
  .nav-active.nav-active {
    color: $yellow;
  }
}

.toc ul {
  font-family: $serif;
  font-size: 1.2rem;
}

.toc__preTitle {
  display: block;
  font-family: $sansSerif;
  letter-spacing: 3px;
  text-transform: uppercase;
  opacity: .4;
}

.toc__title {
  display: inline-block;
  border-bottom: 1px solid #fff;
  color: $yellow;
  font-size: 1.5rem;
  padding: 0 0 .6rem 0;
}

// color backgrounds

[class*='bg--'] {
  // this needs to go edge to edge—can't be overwritten
  margin: 0 !important;
  padding: 3rem 0;
}

.bg--white {
  background: $white;
  color: $black;
}

// footer

.footer {
  background: $lightGrey;
  min-height: 12rem;
  margin: 5rem 0 0 0;
  padding: 4rem 0 6rem;
}

.footer__meta {
  display: flex;
  color: $black;

  @include breakpoint('mobile') {
    flex-direction: column;
  }
}

.footer__meta__desc {
  font-size: 1.2rem;
  flex: 2;
  line-height: 1.4;
  margin-right: $columnPad;

  @include breakpoint('mobile') {
    margin-bottom: 1rem;
  }
}

.footer__meta__nav {
  flex: 1;
  font-size: 1.4rem;

  a {
    border-top: 1px solid $black;
    display: block;
    padding: 1rem 0;
  }
}

.footer__logos {
  border-top: 1px solid $black;
  display: flex;
  margin: 1rem auto 0;
  justify-content: space-between;
  padding: 2rem 0 0 0;

  @include breakpoint('mobile') {
    flex-direction: column;
  }
}

.footer__logos__logo {
  width: 29%;
  max-width: 16rem;

  @include breakpoint('mobile') {
    margin: 1rem auto;
    padding: 0;
    width: 100%;
  }
}

.button {
  border: 2px solid $white;
  cursor: pointer;
  font-size: 2rem;
  padding: 1.5rem;
}

// fly out feature sidebar

.flyOut {
  display: flex;
  margin: 0;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 999999;
  pointer-events: none;

  &.flyOut__active {
    pointer-events: auto;
  }
}

.flyOut__bg {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.75);
  opacity: 0;
  transition: opacity .3s;

  .flyOut__active & {
    opacity: 1;
  }
}

.flyOut__inner {
  background: $lightGrey;
  color: $black;
  left: 100%;
  margin-left: auto;
  overflow-y: auto;
  position: relative;
  width: $flyOutWidth;
  max-width: 100%;
  transition: left .4s;

  .flyOut__active & {
    left: 0;
  }
}

.flyOut__inner__text {
  padding: 3.5rem 1.5rem;

  .flyOut__active & {
    left: 0;
  }
}

.flyOut__close {
  background: $lightGrey;
  border: 2px solid $black;
  cursor: pointer;
  display: block;
  padding: 1rem;
  position: fixed;
  top: 1rem;
}

// graphic styles

.ai2html {
  font-family: $sansSerif;
}

// x & y axis labels
.g-label {

}

// recommendation text
.g-flyOutButton {
  cursor: pointer;
}

// this shows/hides the corresponding artboard markup

.g-ON_matrix-desktop {
  @include breakpoint('tablet') {
    display: none;
  }
  @include breakpoint('mobile') {
    display: none;
  }
}

.g-ON_matrix-tablet {
  @include breakpoint('desktop') {
    display: none;
  }
  @include breakpoint('mobile') {
    display: none;
  }
}

.g-ON_matrix-mobile {
  @include breakpoint('desktop') {
    display: none;
  }
  @include breakpoint('tablet') {
    display: none;
  }
  @include breakpoint('mobile') {
    display: block;
  }
}

